--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PASSWORD_MONGO_DB="qwertyasdfg123@start.mker2iq"
 PORT=8080
 NAME_MONGO_DB="stratoslav"
+SALT=10
+ACCESS_KEY=ewfewcewf5liykyk2hgewgfwghm443sdvsegvd567567
